Made changes to import and fixed issue with initial list creation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,6 +173,7 @@
     <string name="selectAll">Select All</string>
     <string name="unselectAll">Unselect All</string>
     <string name="dontCancel">Don\'t Cancel</string>
+    <string name="importStarted">import started for list:</string>
 
 
 </resources>
